# aws-stepfunctions-orchestrator

./: .env.example  .gitignore  README.md  prompt.txt
.github/workflows/: deploy.yml  test.yml
scripts/: build-and-push.sh  deploy.sh  local-test.sh  monitor-logs.sh  test-workflow.sh
src/: requirements.shared.txt
src/lambda1/: Dockerfile  handler.py  pyproject.toml
src/lambda2/: handler.py  pyproject.toml
src/lambda3/: handler.py  pyproject.toml  requirements.txt
terraform/: eventbridge.tf  lambda.tf  main.tf  outputs.tf  secrets.tf  step-functions.json  step-functions.tf  variables.tf
tests/: test_workflow.py
